--- a/index.ipynb
+++ b/index.ipynb
@@ -49,24 +49,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate sum of squared errors between regression and mean line \n",
     "import numpy as np\n",
     "\n",
     "def sq_err(y_a, y_b):\n",
-    "    \"\"\"\n",
-    "    input\n",
-    "    y_a : true y values\n",
-    "    y_b : regression line\n",
-    "\n",
     "    \n",
-    "    return\n",
-    "    squared error between regression and true line (ss_tot)\n",
-    "    \"\"\"\n",
-    "    pass\n",
+    "    diff = [(y_a[i]-y_b[i])**2 for i in range(len(y_a))]\n",
+    "    diff_sum = sum(diff)\n",
+    "\n",
+    "    return diff_sum\n",
     "\n",
     "# Check the output with some toy data\n",
     "Y_a = np.array([1,3,5,7])\n",
@@ -90,13 +96,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.35"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate Y_mean , squared error for regression and mean line , and calculate r-squared\n",
     "\n",
     "def r_squared(y_real, y_predicted):\n",
+    "    \n",
+    "    mean = np.mean(y_real)\n",
+    "    y_mean = [mean for i in range(len(y_real))] \n",
+    "    SST = sq_err(y_real,y_mean)\n",
+    "    SSE = sq_err(y_real,y_predicted)\n",
+    "    \n",
+    "    r_value = 1- SSE/SST\n",
+    "    \n",
     "    \"\"\"\n",
     "    input\n",
     "    y_real: real values\n",
@@ -105,7 +130,7 @@
     "    return\n",
     "    r_squared value\n",
     "    \"\"\"\n",
-    "    pass\n",
+    "    return r_value\n",
     "\n",
     "# Check the output with some toy data\n",
     "Y = np.array([1,3,5,7])\n",
@@ -148,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
